--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxEdit.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxEdit.razor
@@ -1,13 +1,16 @@
 ﻿@page "/tax/edit/{ProfileId}/{TaxId}"
 
-@using TaxCalculator.WebFrontend.Data
 @using TaxCalculator.WebFrontend.Models
 @using TaxCalculator.WebFrontend.Shared.FormInputs
 @using TaxCalculator.WebFrontend.Validation
 @using TaxCalculator.Domain.Enums
-@using TaxCalculator.Domain.Entities
+@using TaxCalculator.Cqrs.Contracts.Bus
+@using TaxCalculator.WebFrontend.Pages.Taxes.Commands
+@using TaxCalculator.WebFrontend.Pages.Taxes.Queries
+@using TaxCalculator.Cqrs.Contracts
 
-@inject WebApi _webApi
+@inject IQueryBus _queryBus
+@inject ICommandBus _commandBus
 @inject NavigationManager _navigationManager
 
 <PageTitle>Edit Tax Configuration</PageTitle>
@@ -73,7 +76,10 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        var tax = await _webApi.GetOneAsync<Tax>($"Tax/one?TaxId={TaxId}");
+        var tax = await _queryBus.ExecuteAsync<GetTaxByIdQuery, TaxModel>(new GetTaxByIdQuery
+        {
+            TaxId = Guid.Parse(TaxId)
+        });
 
         Tax.Id = tax.Id;
         Tax.Amount = tax.Amount.ToString();
@@ -95,8 +101,16 @@ else
     {
         if (IsValid)
         {
-            var result = await _webApi.Update(Tax, "Tax");
-            if (result.RecordId != null)
+            var result = await _commandBus.DispatchAsync(new UpdateTaxCommand
+            {
+                Id = Tax.Id,
+                Amount = Tax.Amount,
+                AppliesBefore = Tax.AppliesBefore,
+                IsPercentage = Tax.IsPercentage,
+                TaxType = Enum.Parse<TaxType>(Tax.TaxType)
+            });
+            
+            if (result.Status == CommandStatus.Success)
             {
                 _navigationManager.NavigateTo($"tax-profile/details/{ProfileId}");
             }
