--- a/TaxCalculator.WebFrontend/Pages/Incomes/IncomeCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/Incomes/IncomeCreate.razor
@@ -3,9 +3,11 @@
 @using TaxCalculator.WebFrontend.Models
 @using TaxCalculator.WebFrontend.Shared.FormInputs
 @using TaxCalculator.WebFrontend.Validation
-@using TaxCalculator.WebFrontend.Data
+@using TaxCalculator.Cqrs.Contracts.Bus
+@using TaxCalculator.WebFrontend.Pages.Incomes.Commands
+@using TaxCalculator.Cqrs.Contracts
 
-@inject WebApi _webApi
+@inject ICommandBus _commandBus
 @inject NavigationManager _navigationManager
 
 <PageTitle>Add Income</PageTitle>
@@ -49,8 +51,14 @@
 
     private async Task HandleSubmitAsync()
     {
-        var result = await _webApi.Create(CreateIncomeModel, "Income");
-        if (result.RecordId != null)
+        var result = await _commandBus.DispatchAsync(new CreateIncomeCommand
+        {
+            Value = CreateIncomeModel.Value,
+            TaxProfileId = CreateIncomeModel.TaxProfileId,
+            IncomeDate = DateTime.Parse(CreateIncomeModel.IncomeDate)
+        });
+        
+        if (result.Status == CommandStatus.Success)
         {
             _navigationManager.NavigateTo($"/manage-incomes/{ProfileId}");
         }
