--- a/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendGrid.razor
+++ b/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendGrid.razor
@@ -1,9 +1,14 @@
 ﻿@page "/manage-additional-spends/{ProfileId}"
 
 @using TaxCalculator.Domain.Entities
-@using TaxCalculator.WebFrontend.Data
+@using TaxCalculator.Cqrs.Contracts.Bus
+@using TaxCalculator.WebFrontend.Models
+@using TaxCalculator.WebFrontend.Pages.AdditionalSpends.Commands
+@using TaxCalculator.WebFrontend.Pages.AdditionalSpends.Queries
+@using TaxCalculator.Cqrs.Contracts
 
-@inject WebApi _webApi
+@inject IQueryBus _queryBus
+@inject ICommandBus _commandBus
 
 <PageTitle>Manage Additional Spends</PageTitle>
 
@@ -58,18 +63,24 @@ else
     [Parameter]
     public string ProfileId { get; set; }
     
-    private List<AdditionalSpend>? AdditionalSpends { get; set; }
+    private List<AdditionalSpendModel>? AdditionalSpends { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        AdditionalSpends = (await _webApi.GetManyAsync<AdditionalSpend>($"AdditionalSpend?ProfileId={ProfileId}"))
-            .ToList();
+        AdditionalSpends = await _queryBus.ExecuteAsync<GetAdditionalSpendsQuery, List<AdditionalSpendModel>>(new GetAdditionalSpendsQuery
+        {
+            TaxProfileId = Guid.Parse(ProfileId)
+        });
     }
 
     private async Task HandleDeleteAsync(Guid id)
     {
-        var result = await _webApi.Remove($"AdditionalSpend?AdditionalSpendId={id}");
-        if (result.RecordId != null)
+        var result = await _commandBus.DispatchAsync(new RemoveAdditionalSpendCommand
+        {
+            AdditionalSpendId = id
+        });
+        
+        if (result.Status == CommandStatus.Success)
         {
             AdditionalSpends = AdditionalSpends?.Where(x => x.Id != id).ToList();
             StateHasChanged();
