--- a/TaxCalculator.WebFrontend/Pages/Dashboard/ProfileForm.razor
+++ b/TaxCalculator.WebFrontend/Pages/Dashboard/ProfileForm.razor
@@ -1,10 +1,11 @@
 ﻿@using TaxCalculator.WebFrontend.Validation;
 @using TaxCalculator.WebFrontend.Models
 @using TaxCalculator.WebFrontend.Shared.FormInputs
-@using TaxCalculator.WebFrontend.Data
 @using TaxCalculator.Domain.Entities
+@using TaxCalculator.Cqrs.Contracts.Bus
+@using TaxCalculator.WebFrontend.Pages.TaxProfiles.Queries
 
-@inject WebApi _webApi;
+@inject IQueryBus _queryBus
 
 @if (Initializing)
 {
@@ -44,7 +45,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        TaxProfiles = (await _webApi.GetManyAsync<TaxProfile>("TaxProfile"))
+        TaxProfiles = (await _queryBus.ExecuteAsync<GetTaxProfilesQuery, List<TaxProfileModel>>(new GetTaxProfilesQuery()))
             .ToDictionary(x => x.Id.ToString(), x => x.Name);
 
         EditContext = new EditContext(TaxProfileDropdown);
