--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxGrid.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxGrid.razor
@@ -1,5 +1,4 @@
-﻿@using TaxCalculator.WebFrontend.Data
-@using TaxCalculator.Domain.Entities
+﻿@using TaxCalculator.Domain.Entities
 @using TaxCalculator.Cqrs.Contracts.Bus
 @using TaxCalculator.WebFrontend.Models
 @using TaxCalculator.WebFrontend.Pages.Taxes.Commands
