--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
@@ -1,6 +1,5 @@
 ﻿@page "/tax-profile/details/{ProfileId}"
 
-@using TaxCalculator.Domain.Entities
 @using TaxCalculator.Domain.Services.Identifier
 @using TaxCalculator.WebFrontend.Models
 @using TaxCalculator.WebFrontend.Pages.Taxes
@@ -10,12 +9,14 @@
 @using TaxCalculator.WebFrontend.Pages.TaxProfiles.Commands
 @using TaxCalculator.Cqrs.Contracts
 @using TaxCalculator.WebFrontend.Pages.TaxProfiles.Queries
+@using TaxCalculator.Contracts
 
 @inject ICommandBus _commandBus;
 @inject IQueryBus _queryBus;
 @inject NavigationManager _navigationManager;
 @inject IIdentifierService _identifierService;
 @inject IJSRuntime _jsRuntime;
+@inject IMapper _mapper;
 
 <PageTitle>Tax Profile Details</PageTitle>
 
@@ -67,7 +68,7 @@ else
     [Parameter]
     public string ProfileId { get; set; }
     
-    private UpdateTaxProfileModel UpdateTaxProfileModel { get; set; } = new();
+    private UpdateTaxProfileModel UpdateTaxProfileModel { get; set; }
     
     private Dictionary<Guid, string>? Currencies { get; set; } = new();
     
@@ -88,10 +89,8 @@ else
 
         if (profile != null)
         {
-            UpdateTaxProfileModel.Name = profile.Name;
-            UpdateTaxProfileModel.Description = profile.Description;
-            UpdateTaxProfileModel.TaxProfileId = ProfileId;
-            
+            UpdateTaxProfileModel = _mapper.Map<UpdateTaxProfileModel>(profile);
+
             Currencies = _identifierService.Currencies.ToDictionary();
             CurrencyId = profile.ProfileCurrencyId.Value;
         }
@@ -102,12 +101,9 @@ else
 
     private async Task HandleProfileUpdate()
     {
-        var result = await _commandBus.DispatchAsync(new UpdateTaxProfileCommand
-        {
-            Description = UpdateTaxProfileModel.Description,
-            Name = UpdateTaxProfileModel.Name,
-            TaxProfileId = Guid.Parse(UpdateTaxProfileModel.TaxProfileId)
-        });
+        var command = _mapper.Map<UpdateTaxProfileCommand>(UpdateTaxProfileModel);
+        
+        var result = await _commandBus.DispatchAsync(command);
         
         if (result.Status == CommandStatus.Success)
         {
