inputs: moved styles to css

--- a/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendCreate.razor
@@ -43,7 +43,7 @@
 
     private CreateAdditionalSpendModel CreateAdditionalSpendModel { get; } = new();
 
-    public bool IsValid => !EditContext.GetValidationMessages().Any();
+    private bool IsValid => !EditContext.GetValidationMessages().Any();
 
     protected override async Task OnInitializedAsync()
     {
