--- a/TaxCalculator.WebFrontend/Shared/FormInputs/ButtonSubmit.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/ButtonSubmit.razor
@@ -1,4 +1,4 @@
-﻿<div style="margin: 5px; display: flex; flex-direction: row-reverse;">
+﻿<div class="app-btn-submit">
     <button type="submit" class="btn btn-primary" disabled="@(!IsEnabled)">@(Label ?? "Save")</button>
 </div>
 
