--- a/TaxCalculator.WebFrontend/Shared/FormInputs/CheckBoxInput.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/CheckBoxInput.razor
@@ -1,5 +1,5 @@
-﻿<div style="margin: 5px; display: flex; justify-content: flex-start; align-items: baseline;">
-    <h6 style="width: 150px">@Label</h6>
+﻿<div class="app-input-group-checkbox">
+    <h6 class="app-input-label">@Label</h6>
     <InputCheckbox @bind-Value=@Value disabled="@(!IsEnabled)" />
 </div>
 <br />
