--- a/TaxCalculator.WebFrontend/Shared/FormInputs/SelectInput.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/SelectInput.razor
@@ -4,12 +4,12 @@
 
 @typeparam TValue
 
-<div style="margin: 5px; display: flex; justify-content: space-between; align-items: baseline">
+<div class="app-input-group">
     @if (Label != null)
     {
-        <h6 style="width: 150px">@Label</h6>
+        <h6 class="app-input-label">@Label</h6>
     }
-    <div style="width: 100%">
+    <div class="app-input-container">
         <select @bind=@CurrentValueAsString
                 @bind:event="oninput"
                 @attributes="AdditionalAttributes"
