--- a/TaxCalculator.WebFrontend/Shared/FormInputs/TextAreaInput.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/TextAreaInput.razor
@@ -2,9 +2,9 @@
 
 @inherits InputTextArea
 
-<div style="margin: 5px; display: flex; justify-content: space-between; align-items: baseline;">
-    <h6 style="width: 150px">@Label</h6>
-    <div style="width: 100%">
+<div class="app-input-group">
+    <h6 class="app-input-label">@Label</h6>
+    <div class="app-input-container">
         <textarea class="form-control"
                   cols="30"
                   rows="5"
