tables: moved styles to css

--- a/TaxCalculator.WebFrontend/Pages/Dashboard/Dashboard.razor
+++ b/TaxCalculator.WebFrontend/Pages/Dashboard/Dashboard.razor
@@ -14,7 +14,7 @@
     </div>
     <br />
     <div>
-        <table class="table" style="width: 100%">
+        <table class="table app-table-max-width">
             <thead>
             <tr>
                 <th>Month</th>
