--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileGrid.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileGrid.razor
@@ -25,7 +25,7 @@ else
             <NavLink href="tax-profile/create" class="btn btn-primary">Create Profile</NavLink>
         </div>
         <div>
-            <table class="table">
+            <table class="table app-table-max-width">
                 <thead>
                 <tr>
                     <th>Name</th>
