--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxGrid.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxGrid.razor
@@ -14,7 +14,7 @@
         <NavLink href="@("tax/create/" + ProfileId)" class="btn btn-primary">Add tax configuration</NavLink>
     </div>
     <div>
-        <table class="table" style="width: 100%;">
+        <table class="table app-table-max-width">
             <thead>
             <tr>
                 <th>Amount</th>
