--- a/TaxCalculator.WebFrontend/Pages/Incomes/IncomeGrid.razor
+++ b/TaxCalculator.WebFrontend/Pages/Incomes/IncomeGrid.razor
@@ -26,7 +26,7 @@ else
         </div>
         <br />
         <div>
-            <table class="table" style="width: 100%">
+            <table class="table app-table-max-width">
                 <thead>
                 <tr>
                     <th>Amount</th>
