--- a/TaxCalculator.WebFrontend/wwwroot/css/app.css
+++ b/TaxCalculator.WebFrontend/wwwroot/css/app.css
@@ -1,5 +1,6 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 @import url('inputs.css');
+@import url('tables.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
