--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
@@ -29,9 +29,9 @@
 else
 {
     <div>
-        <div style="display: flex; justify-content: space-between;">
+        <div class="app-table-header">
             <h3>View profile details</h3>
-            <div style="box-sizing: border-box;">
+            <div class="app-table-actions">
                 <NavLink href="@("manage-incomes/" + ProfileId)" class="btn btn-primary">Manage incomes</NavLink>
                 <NavLink href="@("/manage-additional-spends/" + ProfileId)" class="btn btn-primary">Manage additional spends</NavLink>
             </div>
