--- a/TaxCalculator.WebFrontend/wwwroot/css/app.css
+++ b/TaxCalculator.WebFrontend/wwwroot/css/app.css
@@ -61,6 +61,12 @@ a, .btn-link {
     color: white;
 }
 
-    .blazor-error-boundary::after {
-        content: "An error has occurred."
-    }
+.blazor-error-boundary::after {
+    content: "An error has occurred."
+}
+
+.app-component-mtop-20
+{
+    margin-top: 20px;
+}
+    
