--- a/TaxCalculator.WebFrontend/wwwroot/css/tables.css
+++ b/TaxCalculator.WebFrontend/wwwroot/css/tables.css
@@ -2,3 +2,14 @@
 {
     width: 100%;
 }
+
+.app-table-header
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+.app-table-actions
+{
+    box-sizing: border-box;
+}
