--- a/TaxCalculator.WebFrontend/Shared/MainLayout.razor.css
+++ b/TaxCalculator.WebFrontend/Shared/MainLayout.razor.css
@@ -15,15 +15,16 @@ main {
 .top-row {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
     height: 3.5rem;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
 }
 
     .top-row ::deep a, .top-row ::deep .btn-link {
         white-space: nowrap;
-        margin-left: 1.5rem;
+        margin-left: 1rem;
         text-decoration: none;
     }
 
